Décomposition des traitements des systèmes avec lambda